--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,19 @@ ul,
 ol {
   list-style: none;
 }
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 1200px;
+  width: 100%;
+  min-height: 400px;
+  padding: 40px;
+  background-color: #2f2f2f;
+  border: 2px solid #42b883;
+  color: #fff;
+  border-radius: 40px;
+  transition: all 0.4s ease-in-out;
+}
